List orders, List vouchers, add new client, add new order, filter clients by phone and id

--- a/app/css/App.css
+++ b/app/css/App.css
@@ -17,3 +17,23 @@ body {
 .idCol {
     width: 50px;
 }
+
+.newClient {
+    margin-bottom: 10px;
+}
+
+.newClient input {
+    margin: 8px 0;
+}
+
+.filter {
+    margin-bottom: 10px;
+}
+
+.clientDetails {
+    background-color: #fcf8e3;
+    padding: 8px;
+    border: 1px solid #c8c8c8;
+    border-top: 0;
+    border-bottom: 0;
+}
